SAK-17251
git-svn-id: https://source.sakaiproject.org/svn/site-manage/branches/sakai_2-6-x@69475 66ffb92e-73f9-0310-93c1-f5514f145a0a